testing/httpbin/Ingress.httpbin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"httpbin","namespace":"httpbin"},"spec":{"rules":[{"host":"httpbin.127.0.0.1.xip.io","http":{"paths":[{"backend":{"serviceName":"httpbin","servicePort":8000},"path":"/"}]}}],"tls":[{"hosts":["httpbin.127.0.0.1.xip.io"],"secretName":"httpbin-tls"}]}}
  creationTimestamp: null
  generation: 1
  name: httpbin
  selfLink: /apis/extensions/v1beta1/namespaces/httpbin/ingresses/httpbin
spec:
  rules:
  - host: httpbin.127.0.0.1.xip.io
    http:
      paths:
      - backend:
          serviceName: httpbin
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - httpbin.127.0.0.1.xip.io
    secretName: httpbin-tls
status:
  loadBalancer: {}
